# typecheck

./: '  .gitignore  .travis.yml  CMakeLists.txt  GettingStarted.md  README.md  THIRD_PARTY.md  typecheck_experimentation.py
.github/workflows/: cmake.yml
app/: test_typecheck.cpp
cmake/: fetch_extern.cmake  generate_protos.cmake  options.cmake  utils.cmake
include/: constraint.hpp  constraint_pass.hpp  debug.hpp  generic_type_generator.hpp  literal_protocol.hpp  resolver.hpp  type.hpp  type_manager.hpp  type_solver.hpp  typecheck.hpp
include/protocols/: ExpressibleByDoubleLiteral.hpp  ExpressibleByFloatLiteral.hpp  ExpressibleByIntegerLiteral.hpp
include/resolvers/: ResolveConformsTo.hpp  ResolveEquals.hpp
include/typecheck/: constraint.hpp  constraint_group.hpp  constraint_pass.hpp  debug.hpp  function_definition.hpp  function_var.hpp  generic_type_generator.hpp  known_protocol_kind.hpp  literal_protocol.hpp  raw_type.hpp  resolver.hpp  type.hpp  type_manager.hpp  type_solver.hpp  type_var.hpp  utils.hpp
include/typecheck/protocols/: ExpressibleByDoubleLiteral.hpp  ExpressibleByFloatLiteral.hpp  ExpressibleByIntegerLiteral.hpp
include/typecheck/resolvers/: ResolveApplicableFunction.hpp  ResolveBindOverload.hpp  ResolveBindTo.hpp  ResolveConformsTo.hpp  ResolveConvertible.hpp  ResolveEquals.hpp
protos/: constraint.proto  function_definition.proto  type.proto
src/: constraint_group.cpp  constraint_pass.cpp  constraints.cpp  debug.cpp  function_definition.cpp  function_var.cpp  generic_type_generator.cpp  known_protocol_kind.cpp  raw_type.cpp  resolver.cpp  type.cpp  type_manager+constraints.cpp  type_manager.cpp  type_solver+init_pass.cpp  type_solver+solve.cpp  type_solver.cpp  type_var.cpp  typecheck.cpp  utils.cpp
src/protocols/: literal.cpp
src/resolvers/: ResolveApplicableFunction.cpp  ResolveBindOverload.cpp  ResolveBindTo.cpp  ResolveConformsTo.cpp  ResolveConvertible.cpp  ResolveEquals.cpp
test/: test_constraints.cpp  test_constraints.hpp  test_include_catch.hpp  test_obj.cpp  test_resolvers.cpp  test_resolvers.hpp  test_type_manager.cpp  test_type_manager.hpp  test_typecheck.cpp  utils.hpp
